--- a/styles.css
+++ b/styles.css
@@ -125,16 +125,16 @@ body {
   max-width: 10%;
 
   align-items: center;
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(250, 250, 250);
   border-radius: 10px 10px 10px 10px;
   padding-top: 18px;
   min-width: 100%;
   /*box-shadow: 0px 3px 2px 0px rgba(34, 60, 80, 0.2);
-  border: 1px solid rgb(200,200,200); */
+  border: 1px solid rgb(200,200,200);
   border-bottom: .27rem solid rgb(63,138,224);
   border-left: 1px solid rgba(34, 60, 80, 0.1);
-  border-right: 1px solid rgba(34, 60, 80, 0.1);
-  border-top: 2px solid rgba(34, 60, 80, 0.1);
+  border-right: 1px solid rgba(34, 60, 80, 0.1);*/
+  border-top: 2px solid rgba(34, 60, 80, 0.15);
   border-radius: 8px;
 }
 
@@ -276,7 +276,7 @@ body {
 .holder:hover {
   box-shadow: 0px 0px 2px 1px rgba(34, 60, 80, 0.3);
   cursor: pointer;
-
+  background-color: rgb(250, 250, 250);
   transition: 0.1s;
 }
 
@@ -328,4 +328,23 @@ body {
   margin-bottom: auto;
   width: 1px;
   border-left: 1px solid rgba(0,0,0,0.1);
+}
+
+
+
+
+/*
+ * svgs
+ */
+.svg-img {
+  animation: animation 3s infinite alternate;
+}
+
+@keyframes animation {
+  from {
+    fill: red;
+  }
+  to {
+    fill: green;
+  }
 }
